# ACEF

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
acef-conventions/v1/: assessment-bundle.schema.json  conformity_declaration.schema.json  copyright_rights_reservation.schema.json  data_provenance.schema.json  dataset_card.schema.json  disclosure_labeling.schema.json  evaluation_report.schema.json  event_log.schema.json  evidence_gap.schema.json  governance_policy.schema.json  human_oversight_action.schema.json  incident_report.schema.json  license_record.schema.json  manifest.schema.json  record-envelope.schema.json  risk_register.schema.json  risk_treatment.schema.json  template.schema.json  transparency_disclosure.schema.json  transparency_marking.schema.json  variant-registry.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFORMANCE.md  TEMPLATE_AUTHORING.md  USER_GUIDE.md  acef_system_diagram.html  provision_rollup_diagram.html
docs/summary-pdf/: ACEF_Executive_Overview_generator.py
planning/: ACEF-Spec-Outline-v0.1.md
scripts/: build_golden_bundles.py
src/acef/: __init__.py  _version.py  assessment_builder.py  errors.py  export.py  integrity.py  loader.py  merge.py  package.py  records_util.py  redaction.py  render.py  signing.py
test-vectors/china-cac/: cac-explicit-implicit-pass.acef.acef-assessment.json  cac-label-exception-retention-pass.acef.acef-assessment.json  cac-missing-implicit-metadata-fail.acef.acef-assessment.json
test-vectors/eu-ai-act/: article-12-logging-spec-pass.acef.acef-assessment.json  (+9 more)
tests/: conftest.py
(+228 files in other folders)
