[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acef"
version = "0.1.0"
description = "ACEF (AI Compliance Evidence Format) — Reference SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "AI Commons", email = "acef@aicommons.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6,<3.0",
    "rfc8785>=0.1.2,<1.0",
    "jsonschema[format]>=4.21,<5.0",
    "jsonpointer>=3.0,<4.0",
    "click>=8.1,<9.0",
    "rich>=13.0,<14.0",
    "cryptography>=42.0,<45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
acef = "acef.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/acef"]
